mozglue/baseprofiler/core/ProfileJSONWriter.cpp
@@ -8,10 +8,13 @@
 
 namespace mozilla::baseprofiler {
 
-UniqueJSONStrings::UniqueJSONStrings() { mStringTableWriter.StartBareList(); }
+UniqueJSONStrings::UniqueJSONStrings(JSONWriter::CollectionStyle aStyle) {
+  mStringTableWriter.StartBareList(aStyle);
+}
 
-UniqueJSONStrings::UniqueJSONStrings(const UniqueJSONStrings& aOther) {
-  mStringTableWriter.StartBareList();
+UniqueJSONStrings::UniqueJSONStrings(const UniqueJSONStrings& aOther,
+                                     JSONWriter::CollectionStyle aStyle) {
+  mStringTableWriter.StartBareList(aStyle);
   uint32_t count = mStringHashToIndexMap.count();
   if (count != 0) {
     MOZ_RELEASE_ASSERT(mStringHashToIndexMap.reserve(count));
